fixed api