@@ -1,28 +1,29 @@
 package com.muscleforger.api.service;
 
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.muscleforger.api.entity.Exercise;
 import com.muscleforger.api.entity.User;
-import jakarta.annotation.PostConstruct;
+import com.muscleforger.api.repository.ExerciseRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestClient;
 
-import java.util.ArrayList;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Slf4j
 public class ExerciseService {
 
-    private final RestClient restClient;
+    private final ExerciseRepository exerciseRepository;
     private final CustomExerciseService customExerciseService;
+    private final RestClient restClient;
+    private final ObjectMapper objectMapper = new ObjectMapper();
 
     @Value("${rapidapi.key}")
     private String apiKey;
@@ -33,45 +34,14 @@ public class ExerciseService {
     @Value("${rapidapi.exercisedb.base-url}")
     private String baseUrl;
 
-    private final ConcurrentHashMap<String, Object> cache = new ConcurrentHashMap<>();
+    // ── Public API ────────────────────────────────────────────────────────────────
 
-    @PostConstruct
-    public void warmCache() {
-        CompletableFuture.runAsync(() -> {
-            try {
-                refreshCache();
-            } catch (Exception e) {
-                log.warn("Initial cache warm failed: {}", e.getMessage());
-            }
-        });
+    public List<String> getBodyParts() {
+        return exerciseRepository.findDistinctBodyParts();
     }
 
-    @Scheduled(fixedRate = 6 * 60 * 60 * 1000)
-    public void refreshCache() {
-        log.info("Refreshing exercise cache...");
-        try {
-            CompletableFuture<Void> bodyParts = CompletableFuture.runAsync(() ->
-                    cache.put("bodyParts", fetch("/exercises/bodyPartList")));
-
-            CompletableFuture<Void> allExercises = CompletableFuture.runAsync(() ->
-                    cache.put("exercises:all", fetch("/exercises?limit=100")));
-
-            CompletableFuture<Void> searchBase = CompletableFuture.runAsync(() ->
-                    cache.put("exercises:search", fetch("/exercises?limit=900")));
-
-            CompletableFuture.allOf(bodyParts, allExercises, searchBase).join();
-            log.info("Exercise cache refreshed successfully.");
-        } catch (Exception e) {
-            log.warn("Cache refresh failed: {}", e.getMessage());
-        }
-    }
-
-    public Object getBodyParts() {
-        return cache.computeIfAbsent("bodyParts", k -> fetch("/exercises/bodyPartList"));
-    }
-
-    public Object getExercises(int limit) {
-        return cache.computeIfAbsent("exercises:all", k -> fetch("/exercises?limit=" + limit));
+    public List<Map<String, Object>> getExercises() {
+        return exerciseRepository.findAll().stream().map(this::toMap).toList();
     }
 
     public Object searchExercises(String query) {
@@ -79,34 +49,32 @@ public class ExerciseService {
     }
 
     public Object searchExercises(String query, User user) {
-        List<Map<String, Object>> all = (List<Map<String, Object>>)
-                cache.computeIfAbsent("exercises:search", k -> fetch("/exercises?limit=900"));
-        String q = query.toLowerCase();
-        List<Object> results = new ArrayList<>(all.stream()
-                .filter(e -> matches(e, q))
-                .collect(Collectors.toList()));
+        List<Object> results = new java.util.ArrayList<>(
+                exerciseRepository.search(query).stream()
+                        .map(e -> (Object) toMap(e))
+                        .toList());
 
         if (user != null) {
-            List<Object> custom = customExerciseService.search(user, q)
+            List<Object> custom = customExerciseService.search(user, query)
                     .stream().map(r -> (Object) r).toList();
             results.addAll(0, custom);
         }
         return results;
     }
 
-    public Object getByBodyPart(String bodyPart) {
-        return cache.computeIfAbsent("exercises:bodyPart:" + bodyPart,
-                k -> fetch("/exercises/bodyPart/" + bodyPart + "?limit=100"));
+    public List<Map<String, Object>> getByBodyPart(String bodyPart) {
+        return exerciseRepository.findByBodyPartIgnoreCase(bodyPart)
+                .stream().map(this::toMap).toList();
     }
 
-    public Object getByTarget(String target) {
-        return cache.computeIfAbsent("exercises:target:" + target,
-                k -> fetch("/exercises/target/" + target + "?limit=100"));
+    public List<Map<String, Object>> getByTarget(String target) {
+        return exerciseRepository.findByTargetIgnoreCase(target)
+                .stream().map(this::toMap).toList();
     }
 
-    public Object getByEquipment(String equipment) {
-        return cache.computeIfAbsent("exercises:equipment:" + equipment,
-                k -> fetch("/exercises/equipment/" + equipment + "?limit=100"));
+    public List<Map<String, Object>> getByEquipment(String equipment) {
+        return exerciseRepository.findByEquipmentIgnoreCase(equipment)
+                .stream().map(this::toMap).toList();
     }
 
     public Object getExerciseById(String id) {
@@ -118,28 +86,44 @@ public class ExerciseService {
                 return null;
             }
         }
-        return cache.computeIfAbsent("exercise:" + id,
-                k -> fetch("/exercises/exercise/" + id));
+        return exerciseRepository.findById(id)
+                .map(this::toMap)
+                .orElse(null);
     }
 
-    private Object fetch(String path) {
+    public byte[] getExerciseGif(String exerciseId) {
         return restClient.get()
-                .uri(baseUrl + path)
+                .uri(baseUrl + "/image?resolution=360&exerciseId=" + exerciseId)
                 .header("X-RapidAPI-Key", apiKey)
                 .header("X-RapidAPI-Host", host)
                 .retrieve()
-                .body(Object.class);
+                .body(byte[].class);
     }
 
-    private boolean matches(Map<String, Object> exercise, String query) {
-        return fieldContains(exercise, "name", query)
-                || fieldContains(exercise, "target", query)
-                || fieldContains(exercise, "equipment", query)
-                || fieldContains(exercise, "bodyPart", query);
+    // ── Helpers ───────────────────────────────────────────────────────────────────
+
+    private Map<String, Object> toMap(Exercise e) {
+        Map<String, Object> map = new LinkedHashMap<>();
+        map.put("id", e.getId());
+        map.put("name", e.getName());
+        map.put("bodyPart", e.getBodyPart());
+        map.put("target", e.getTarget());
+        map.put("equipment", e.getEquipment());
+        map.put("gifUrl", e.getGifUrl());
+        map.put("secondaryMuscles", parseJson(e.getSecondaryMuscles()));
+        map.put("instructions", parseJson(e.getInstructions()));
+        map.put("description", e.getDescription());
+        map.put("difficulty", e.getDifficulty());
+        map.put("category", e.getCategory());
+        return map;
     }
 
-    private boolean fieldContains(Map<String, Object> exercise, String field, String query) {
-        Object val = exercise.get(field);
-        return val != null && val.toString().toLowerCase().contains(query);
+    private Object parseJson(String json) {
+        if (json == null) return List.of();
+        try {
+            return objectMapper.readValue(json, new TypeReference<List<String>>() {});
+        } catch (Exception ex) {
+            return List.of();
+        }
     }
 }
